	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.4.12/1.6.5 will not understand this new
	  format.  The automatic format conversion can be avoided by running
	  the following command on the MDS:
	  	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	  For more information, please refer to bugzilla 13904.

Severity   : minor
Bugzilla   : 15837
Description: oops in page fault handler
Details    : kernel page fault handler can return two special 'pages' in error case, don't
             try dereference NOPAGE_SIGBUS and NOPAGE_OMM.

Severity   : minor
Bugzilla   : 15716
Description: timeout with invalidate import.
Details    : ptlrpcd_check call obd_zombie_impexp_cull and wait request which should be
             handled by ptlrpcd. This produce long age waiting and -ETIMEOUT
             ptlrpc_invalidate_import and as result LASSERT.

Severity   : normal
Frequency  : only with broken builds/installations
Bugzilla   : 15779
Description: do not LBUG if lquota.ko and fsfilt_ldiskfs.ko are of different versions
Details    : just return an error to a user, put a console error message

Severity   : enhancement
Bugzilla   : 15741
Description: Update to RHEL5 kernel-2.6.18-53.1.19.el5.

Severity   : enhancement
Bugzilla   : 15742
Description: Update to RHEL4 kernel-2.6.9-67.0.15.

Severity   : major
Bugzilla   : 14134
Description: enable MGS and MDT services start separately
Details    : add a 'nomgs' option in mount.lustre to enable start a MDT with
             a co-located MGS without starting the MGS, which is a complement
             to 'nosvc' mount option.

Severity   : normal
Frequency  : always, on ppc.
Bugzilla   : 14856
Description: cleanup in ptlrpc code, related to ppc platform
Details    : store magic in native order avoid panic's in recovery on ppc node
             and forbid from this error in future. Also fix posibily of twice swab
             data. Fix get lov striping to userpace.
